--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -1,5 +1,6 @@
 /*GAMEPAGE STYLING*/
 
+/*Sets definite gameboard and body size*/
 body, .gameboard {
 	max-width: 1440px;
 	max-height: 650px;
@@ -12,6 +13,7 @@ body {
 	background-color: black;
 }
 
+/*styles header*/
 header {
 	background: green;
 	width: 100%
@@ -21,12 +23,14 @@ header {
 	display: inline-block;
 }
 
+/*Dropdown "Controls" styling*/
 .dropdown {
 	position: relative;
 	display: inline-block;
 	float: right;
 }
 
+/*Styles the contents of dropdown menu*/
 .dropdownContent{
 	display: none;
 	position: absolute;
@@ -34,6 +38,7 @@ header {
 	z-index: 1;
 }
 
+/*Adds hover quality to display dropdown menu*/
 .dropdown:hover .dropdownContent {
 	display: block;
 }
