add movement functionality for both players

--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -78,6 +78,7 @@ header {
   background-color: pink;
 }
 
+/*placeholder styling for Player Two image*/
 .playerTwo {
 	background-color: beige;
 	right: 40%;
