--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -9,6 +9,9 @@ body {
   height: 650px;
 }
 
+.canvasBoard {
+  background-color: teal;
+}
 /*Sets definite max height entire body and gameboard*/
 .height {
   max-height: 650px;
@@ -60,12 +63,13 @@ header {
 .gameboard {
 	background-color: teal;
 	position: relative;
+	overflow: hidden;
 }
 
 /*Styling for both player divs*/
 .players {
-  max-width: 30px;
-  width: 30px;
+  max-width: 60px;
+  width: 60px;
   max-height: 60px;
   height: 60px;
   position: absolute;
@@ -82,4 +86,17 @@ header {
 .playerTwo {
 	background-color: beige;
 	right: 40%;
+}
+
+/*styles all rockets*/
+.rocketLeft {
+  position: absolute;
+  display: inline;
+  left: -100px;
+}
+
+.rocketRight {
+  position: absolute;
+  display: inline;
+  right: -100px;
 }
