--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -2,16 +2,13 @@
 
 /*Sets definite body size*/
 body {
-  background-color: black;
+/*  background-color: black;*/
   max-width: 1440px;
   max-height: 650px;
   width: 1440px;
   height: 650px;
 }
 
-.canvasBoard {
-  background-color: teal;
-}
 /*Sets definite max height entire body and gameboard*/
 .height {
   max-height: 650px;
@@ -88,11 +85,19 @@ header {
 	right: 40%;
 }
 
+.rocket {
+  max-width: 60px;
+  max-height: 80px;
+  width: 100%;
+  height: 25px;
+  background-size: cover;
+}
 /*styles all rockets*/
 .rocketLeft {
   position: absolute;
   display: inline;
   left: -100px;
+  background-image: url("../images/rocketRight.png");
 }
 
 .rocketRight {
@@ -101,3 +106,13 @@ header {
   right: -100px;
 }
 
+.messageBoard {
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 41%;
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  background-color: red;
+}
