--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -1,5 +1,11 @@
 /*GAMEPAGE STYLING*/
 
+
+* {
+  font-family: 'Oswald', sans-serif;
+  color: white;
+}
+
 /*Sets definite body size*/
 body {
 /*  background-color: black;*/
@@ -20,20 +26,51 @@ body {
 	margin: 0 auto;
 }
 
+
 /*Defines gameboard width to be slightly smaller than entire body*/
 .gameboard {
   max-width: 1100px;
   width: 1100px;
+  background-image: url('../images/ground.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /*styles header*/
 header {
-  background: green;
-  width: 100%
+  background: linear-gradient(#093300, #0E4C00);
+  width: 100%;
+  height: 120px;
+  border: 2px solid black;
+  box-shadow: 3px 3px 5px #444;
 }
 
 .gameName {
 	display: inline-block;
+  padding: 10px 0 11px 35px;
+  font-size: 68px;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 900;
+  /*text-shadow: 1px 1px 1px #000;*/
+  background:-webkit-linear-gradient(#fff, #222);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  color: #fff;
+}
+
+#airborne {
+  background-image: url('../images/airborne.png');
+  max-width: 80px;
+  max-height: 120px;
+  width: 80px;
+  height: 115px;
+  background-size: cover; 
+  display: inline-block;
+  position: absolute;
+  left: 48%;
+  z-index: 1;
 }
 
 /*Dropdown "Controls" styling*/
@@ -41,6 +78,13 @@ header {
 	position: relative;
 	display: inline-block;
 	float: right;
+  padding: 30px 70px 0 0;
+  font-size: 36px;
+  margin: 0;
+  font-weight: 600;
+  background:-webkit-linear-gradient(#fff, #555);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color: transparent;
 }
 
 /*Styles the contents of dropdown menu*/
@@ -48,7 +92,8 @@ header {
 	display: none;
 	position: absolute;
 	min-width: 160px;
-	z-index: 1;
+	z-index: 3;
+  background-color: green;
 }
 
 /*Adds hover quality to display dropdown menu*/
@@ -104,6 +149,7 @@ header {
   position: absolute;
   display: inline;
   right: -100px;
+  background-image: url("../images/rocketLeft.png");
 }
 
 .messageBoard {
