--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -61,7 +61,7 @@ header {
 }
 
 #airborne {
-  background-image: url('../images/airborne.png');
+  background-image: url('../images/eagle.png');
   max-width: 80px;
   max-height: 120px;
   width: 80px;
@@ -69,7 +69,8 @@ header {
   background-size: cover; 
   display: inline-block;
   position: absolute;
-  left: 48%;
+  top: -1.5%;
+  left: 34%;
   z-index: 1;
 }
 
@@ -93,6 +94,7 @@ header {
 	position: absolute;
 	min-width: 160px;
 	z-index: 3;
+  color: white;
   background-color: green;
 }
 
@@ -111,9 +113,13 @@ header {
 /*Styling for both player divs*/
 .players {
   max-width: 60px;
-  width: 60px;
-  max-height: 60px;
-  height: 60px;
+  width: 46px;
+  max-height: 100px;
+  height: 80px;
+  overflow: hidden;
+  background-image: url('../images/paratrooper.png');
+  background-size: cover;
+  background-position: center;
   position: absolute;
   top: 8px;
 }
@@ -121,14 +127,15 @@ header {
 /*placeholder styling for Player One image*/
 .playerOne {
   left: 40%;
-  background-color: pink;
+ /* background-color: pink;*/
 }
 
 /*placeholder styling for Player Two image*/
 .playerTwo {
-	background-color: beige;
+	/*background-color: beige;*/
 	right: 40%;
 }
+
 
 .rocket {
   max-width: 60px;
@@ -156,9 +163,10 @@ header {
   text-align: center;
   position: absolute;
   top: 40%;
-  left: 41%;
+  left: 40%;
   width: 200px;
   height: 100px;
   padding: 20px;
   background-color: red;
+  border: 2px solid black;
 }
