--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -1,25 +1,25 @@
 /*GAMEPAGE STYLING*/
 
-
+/*Entire page styling*/
 * {
+   color: white;
   font-family: 'Oswald', sans-serif;
-  color: white;
 }
 
 /*Sets definite body size*/
 body {
 /*  background-color: black;*/
+   height: 650px;
   max-width: 1440px;
   max-height: 650px;
   width: 1440px;
-  height: 650px;
- 
 }
 
 /*Sets definite max height entire body and gameboard*/
 .height {
-  max-height: 650px;
   height: 650px;
+  max-height: 650px;
+
 }
 
 /*Sets margin for body and gameboard*/
@@ -30,129 +30,179 @@ body {
 
 /*Defines gameboard width to be slightly smaller than entire body*/
 .gameboard {
-  max-width: 1100px;
-  width: 1100px;
   background-image: url('../images/backdrop.png');
   background-size: cover;
   background-repeat: no-repeat;
   border-left: 2px solid black;
   border-right: 2px solid black;
+  max-width: 1100px;
+  width: 1100px;
 }
 
 /*styles header*/
 header {
-  background: linear-gradient(#093300, #0E4C00);
-  width: 100%;
-  height: 120px;
+  background: linear-gradient(#0d0c0a, #39363f);
   border: 2px solid black;
   box-shadow: 3px 3px 5px #444;
-
+  height: 120px;
+  width: 100%;
+  position: relative;
 }
 
+/* Game title styling*/
 .gameName {
+  background:-webkit-linear-gradient(#efd8a6, #222);
+  color: #fff;
 	display: inline-block;
-  padding: 10px 0 11px 35px;
   font-size: 68px;
-  margin: 0;
-  text-transform: uppercase;
   font-weight: 900;
-  /*text-shadow: 1px 1px 1px #000;*/
-  background:-webkit-linear-gradient(#fff, #222);
+  margin: 0;
+  padding: 15px 0 11px 35px;
+  text-transform: uppercase;
+  position: relative;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  position: relative;
-  color: #fff;
 }
 
+/* Eagle patch styling */
 #airborne {
   background-image: url('../images/eagle.png');
-  max-width: 80px;
-  max-height: 120px;
-  width: 80px;
-  height: 115px;
   background-size: cover; 
   display: inline-block;
-  position: absolute;
-  top: -1.5%;
+  height: 115px;
   left: 34%;
+  max-width: 80px;
+  max-height: 120px;
+  position: absolute;
+  top: 0;
+  width: 80px;
   z-index: 1;
 }
 
 /*Dropdown "Controls" styling*/
 .dropdown {
-	position: relative;
-	display: inline-block;
-	float: right;
-  padding: 30px 80px 0 0;
+  display: inline-block;
+  float: right;
   font-size: 28px;
-  margin: 0;
   font-weight: 100;
+   margin: 0;
+  padding: 40px 85px 0 0;
+	position: relative;
 }
 
-/*Styles the contents of dropdown menu*/
+/* Styles color of words marked with span in html*/
+span {
+  color: #bdb090;
+}
+
+/* Styles the contents of dropdown menu*/
 .dropdownContent {
-  right: 0;
-	display: none;
-	position: absolute;
-	min-width: 160px;
-	z-index: 3;
-  color: white;
   background-color: black;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 0 5px 10px 20px;
   border: 2px solid gold;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.7);
+  color: white;
+  display: none;
+  min-width: 135px; 
+  padding: 0 5px 10px 20px;
+  position: absolute;
+  right: 0;
+  -webkit-font-smoothing:antialiased;
+	z-index: 3;
 }
 
+/* Styles h2 header in dropdown menu*/
 .dropdownContent h2 {
   font-size: 20px;
+  text-transform: uppercase;
 }
 
+/* styles main dropdown content*/
 .dropdownContent p{
   font-size: 16px;
 }
 
-/*Adds hover quality to display dropdown menu*/
+/* Adds hover quality to display dropdown menu*/
 .dropdown:hover .dropdownContent {
 	display: block;
 }
 
-/*Main gameboard styling*/
+/* Main gameboard styling*/
 .gameboard {
 	background-color: teal;
+  overflow: hidden;
 	position: relative;
-	overflow: hidden;
 }
 
-
+/* styles all buttons*/
 .button {
-  color: gold;
-  font-size: 30px;
+  background-color: #0d0c0a;
   border-radius: 6px;
+  color: #efd8a6;
+  font-size: 30px;
+  font-weight: 500; 
+  padding: 7px 18px 7px 18px;
+  text-shadow: 2px 2px 2px #39363f;
   text-transform: uppercase;
-  padding: 5px 15px 5px 15px;
-  background-color: blue;
-  font-weight: 500;
   transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s; /* Safari */
 }
 
+/* changes button style on press*/
 .button:active {
-  transform: translateY(4px);
+transform: translateY(4px);
 }
 
+/* styling for play button*/
 #playBtn {
-  position: absolute;
+  border: 2px solid #bdb090;
   left: 43.1%;
+  position: absolute;
   top: 40%;
-  color: gold;
-  border: 2px solid green;
+   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
+
+/* Fade in animations for PlayButton*/
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Styling when hovering over play button*/
 #playBtn:hover {
   box-shadow: 0 10px 14px 0 rgba(0,0,0,0.24), 0 15px 48px 0 rgba(0,0,0,0.19);
+  color: #bdb090;
 }
 
 
-/*Styling for both player divs*/
+/* Styling for both player divs*/
 .players {
   max-width: 60px;
   width: 46px;
@@ -163,21 +213,23 @@ header {
   background-size: cover;
   background-position: center;
   position: absolute;
-  top: 8px;
+  top: 20px;
+  display: none;
 }
 
-/*placeholder styling for Player One image*/
+/* placeholder styling for Player One image*/
 .playerOne {
   left: 40%;
  /* background-color: pink;*/
 }
 
-/*placeholder styling for Player Two image*/
+/* placeholder styling for Player Two image*/
 .playerTwo {
 	/*background-color: beige;*/
 	right: 40%;
 }
 
+/* styles C47 that drops troops*/
 .plane {
   background-image: url('../images/c47.png');
   background-size: cover;
@@ -188,10 +240,43 @@ header {
   height: 100%;
   position: absolute;
   right: -550px;
-  top: -10;
+  top: -20;
+  z-index: 1;
+  -webkit-animation: turbulance 0.2s ease infinite;
+  -moz-animation: turbulance 0.2s ease infinite;
+  -o-animation: turbulance 0.2s ease infinite;
+  animation: turbulance 0.2s ease infinite;
 }
 
+/* Adds plane turbulance*/
+@-webkit-keyframes turbulance {
+    0% {-webkit-transform: rotateZ(.1deg);}
+    50% {-webkit-transform: rotateZ(-.1deg);}
+    100% {-webkit-transform: rotateZ(.1deg);}
+}
 
+/* Adds plane turbulance*/
+@-moz-keyframes turbulance {
+    0% {-moz-transform: rotateZ(.1deg);}
+    50% {-moz-transform: rotateZ(-.1deg);}
+    100% {-moz-transform: rotateZ(.1deg);}
+}
+
+/* Adds plane turbulance*/
+@-o-keyframes turbulance {
+    0% {-o-transform: rotateZ(.1deg);}
+    50% {-o-transform: rotateZ(-.1deg);}
+    100% {-o-transform: rotateZ(.1deg);}
+}
+
+/* Adds plane turbulance*/
+@keyframes turbulance {
+    0% {transform: rotateZ(.1deg);}
+    50% {transform: rotateZ(-.1deg);}
+    100% {transform: rotateZ(.1deg);}
+}
+
+/* styles all rockets*/
 .rocket {
   max-width: 60px;
   max-height: 80px;
@@ -199,7 +284,8 @@ header {
   height: 25px;
   background-size: cover;
 }
-/*styles all rockets*/
+
+/* styles rockets shot from left side of the screen*/
 .rocketLeft {
   position: absolute;
   display: inline;
@@ -207,6 +293,7 @@ header {
   background-image: url("../images/rocketRight.png");
 }
 
+/* styles rockets shot from right side of the screen*/
 .rocketRight {
   position: absolute;
   display: inline;
@@ -214,15 +301,41 @@ header {
   background-image: url("../images/rocketLeft.png");
 }
 
+/* style message board created with messageBoard() function*/
 .messageBoard {
-  text-align: center;
+  text-align: left;
   position: absolute;
-  top: 40%;
-  left: 40%;
-  width: 200px;
-  height: 100px;
-  padding: 20px;
-  background-color: red;
-  border: 2px solid black;
+  top: 22%;
+  left:30%;
+  width: 400px;
+  height: 200px;
+  padding: 6px 15px;
+  border: 3px solid black;
+  box-shadow: 3px 3px 5px #444;
+   -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+/* Message board header styling*/
+.messageBoard h2 {
+  padding: 5px 0px;
+  text-shadow: 2px 2px 2px #222;
+  font-size: 22px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+/*Message board main content styling*/
+.messageBoard p {
+  margin: 0 0 8px 0;
+}
+
+/* Message board button styling*/
+.messageBoard button {
+  font-size: 18px;
+  margin-top: 3px;
 }
 
